objects/Metadata_Item__c.object
<CustomObject   >
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRC32__c</fullName>
        <label>CRC32</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <label>Last Modified By(Source Org)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Source_Org__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Last Modified Date(Source Org)</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Snapshot__c</fullName>
        <label>Snapshot</label>
        <referenceTo>Snapshot__c</referenceTo>
        <relationshipLabel>Metadata Items</relationshipLabel>
        <relationshipName>Metadata_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>